--- a/styles.css
+++ b/styles.css
@@ -6,65 +6,51 @@ body{
     height: 100vh;
     margin: 0;
     color: white;
-    
+    padding: 0 60px;
+}
+.body{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 60px;
 }
 nav{
-    display: inline-block;
-    width: 430px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 nav ul{
     list-style-type: none;
     padding: 0;
     display: flex;
-    width: 420px;
-    padding-left: 40px;
+    width: 600px;
     padding-top: 10px;
-    justify-content: space-around;
-}
-nav li{
-    flex: 1 1 0;
-    font-size: 12px;
+    justify-content: space-between;
 }
 nav a{
     text-decoration: none;
-    font-size: 10;
     color: white;
     font-weight: bold;
     font-family: Arial;
+    font-size: 18px;
 }
 nav a:hover{
     color: orange;
 }
-head{
-    height: 70px;
-    width: 200px; ;
-}
 .logo{
     color: orange;
-    float: left;
-    font-size: 25px;
+    font-size: 30px;
     font-family: Arial;
-    padding-left: 20px;
-}
-.search{
-    width: 160px;
-    display: inline;
-    padding: 20px;
-    
-}
+    }
 .srch{
-    width: 150px;
+    width: 160px;
     background: transparent;
     border:1px,solid orange;
-    height: 20px;
-    margin-top: 10px;
+    height: 38px;
+    margin-top: 20px;
     color: white;
     border-right: none;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 12px;  
-    margin-left: 0;
-    padding-left: 0;
-    border-top-right-radius: 4px;
+    font-size: 18px;  
     border-bottom-left-radius: 4px;
 }
 .btn{
@@ -75,30 +61,23 @@ head{
     border-top-right-radius: 4px;
     margin-left: 0;
     padding-left: 0;
-    width: 45px;
+    width: 60px;
+    height: 38px;
+    font-size: 16px;
 }
-srch:focus{
-    outline: none;
-}
-btn:focus{
-    outline: none;
-}
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
 .cnt-btn{
-    margin-left: 20px;
-    height: 20px;
+    margin-left: 0px;
+    height: 40px;
     background-color: orange;
     border: none;
-    width: 80px;
-    font-size: 15px;
+    width: 160px;
+    font-size: 22px;
     border-radius: 8px;
-    margin-top: 10px;
-    font-weight: bold;
+    margin-top: 8px;
+}
+.cnt{
+    flex: 5;
+    margin-top: 20px;
 }
 .cnt-btn a{
     color: black;
@@ -110,79 +89,63 @@ btn:focus{
     .cnt span{
         color: orange;
     }
-.cnt{
-     width: 550px;
-     height: 10px;
-     margin: 0;
-     color: white;
-     position: relative;
-     padding: 0;
-     top: 50px;
-     left:30px ;
-
-}
 p{
-    padding-left: 20px;
-    padding-bottom:0px;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 20px;
-    font-size: 12px;
-     
+    font-size: 20px;
+    margin-top: 0px;
+     line-height: 30px;
 }
 .cnt h1{
-    padding-left: 20px; 
     font-family: 'Times New Roman', Times, serif;
+    font-size:54px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 .form{
-    width: 140px;
-    height:200px;
-    position: absolute;
-    left: 550px;
-    top: 90px;
+    height:400px;
     background: linear-gradient(rgba(0, 0, 0, 0.733), rgba(0, 0, 0, 0.479));
     border-radius: 10px;
-    padding: 15px;
+    padding: 0px;
+    flex: 1.3;
+    padding: 30px;
+    
+    
 }
  .form h2{
-    width:120px;
+    width:200px;
     font-family: sans-serif;
     text-align: center;
     color:orange;
-    font-size: 14px;
+    font-size: 24px;
     background-color: white;
-    border-radius: 6px;
-    margin: 3px;
-    padding: 2px;
+    border-radius: 8px;
+    margin: 0 auto;
   }
   .form input{
     background: transparent;
-    width: 120px;
-    height: 15px;
+    width: 220px;
+    height: 40px;
     border-bottom: 1px solid orange;
     border-top:none ;
     border-left: none;
     border-right:none;
-    color: white ;
-    margin-top: 20px;
+    color: white;
     font-family:sans-serif ;
     letter-spacing: 1px;
-    font-size: 8px;
+    font-size: 14px;
+    margin-top: 30px ;
+    font-weight: bold;
   } 
-  .form input:focus{
-    outline: none;
-  }
-  ::placeholder{
-    color: white;
-  }
+  
   .btrn{
-    width: 120px;
-    height:20px ;
+    width: 250px;
+    height:40px ;
     background: orange;
     border: none;
-    margin-top: 15px;
-    font-size: 14px;
-    border-radius:10px ;
-    cursor: pointer;
+    margin-top: 40px;
+    font-size: 20px;
+    border-radius:12px;
+    font-weight: bold;
   }
   .btrn a{
     color: black;
@@ -195,12 +158,12 @@ p{
   }
   .link{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
+    font-size: 18px;
     padding: 8px;
     padding-bottom: 0px;
     text-align: center;
     margin: 0px;
-    line-height: 14px;
+    line-height: 20px;
   }
   .link a{
     color: orange;
@@ -210,6 +173,6 @@ p{
 text-align: center;
 padding: 0;
 padding-top: 2px;
-font-size: 12px;
+font-size: 16px;
 font-weight: bold;
 }
